--- a/React19StepByStep/tuturialChap.html
+++ b/React19StepByStep/tuturialChap.html
@@ -170,8 +170,8 @@
           </td>
         </tr>
         <tr>
-          <td>a</td>
-          <td></td>
+          <td>19 Pass JSX with Props</td>
+          <td>{ children }</td>
           <td>
             <div></div>
             <div></div>
@@ -179,28 +179,42 @@
           </td>
         </tr>
         <tr>
-          <td>a</td>
-          <td></td>
+          <td>21</td>
+          <td>#20 Get Input Field Value</td>
           <td>
-            <div></div>
+            <div>e.target.value</div>
             <div></div>
             <div></div>
           </td>
         </tr>
         <tr>
-          <td>a</td>
-          <td></td>
+          <td>22</td>
+          <td>21 Controlled Component</td>
           <td>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+              A component is called as controlled component when it has a form
+              with some input fields and we deal/control those fields with react
+              state
+            </div>
+            <div>1 - store value in state</div>
+            <div>2 - onChange event</div>
+            <div>3 - use value attribute attached</div>
+            <div>If</div>
+            <div>
+              we are controlling input fields without react states thats called
+              uncontrolled component
+            </div>
           </td>
         </tr>
         <tr>
-          <td>a</td>
-          <td></td>
+          <td>23</td>
+          <td>22: Handle Checkbox in React</td>
           <td>
-            <div></div>
+            <div>
+              <!-- if you remove htmlFor="js" then you will not be able to click on JS in label -->
+              <input type="checkbox" id="js" />
+              <label htmlFor="js">JS</label>
+            </div>
             <div></div>
             <div></div>
           </td>
