--- a/React19StepByStep/tuturialChap.html
+++ b/React19StepByStep/tuturialChap.html
@@ -220,8 +220,8 @@
           </td>
         </tr>
         <tr>
-          <td>a</td>
-          <td></td>
+          <td>26</td>
+          <td>#27 what are hooks</td>
           <td>
             <div></div>
             <div></div>
